--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,24 +13,19 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/txt1"
-        android:textColor="#ffffff"
         android:textAlignment="center"
+        android:id="@+id/titulo"
+        android:textColor="#ffffff"
         android:textSize="20sp"
         android:textStyle="bold"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Proyecto Hackaton"
-        android:textAlignment="center"
+        android:id="@+id/txt1"
         android:textColor="#ffffff"
+        android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold"/>
-
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/Lista"/>
 
 </LinearLayout>
